# internal/request/LendingRequest.go
@@ -1,0 +1,6 @@
+package request
+
+type LendingRequest struct {
+	ReturnDate string `json:"return_date"`
+	Code       string `json:"code"`
+}
